--- a/AplikacjaAndroid/App.xaml
+++ b/AplikacjaAndroid/App.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:AplikacjaAndroid"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-             x:Class="AplikacjaAndroid.App">
+             x:Class="AplikacjaAndroid.App"
+             UserAppTheme="Light"
+             >
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
