--- a/AplikacjaAndroid/Modules/Books/ReadedBook/ReadedBookView.xaml
+++ b/AplikacjaAndroid/Modules/Books/ReadedBook/ReadedBookView.xaml
@@ -4,15 +4,16 @@
              x:Class="AplikacjaAndroid.ReadedBookView"
              xmlns:vm="clr-namespace:AplikacjaAndroid"
              Title="Readed books">
-    <VerticalStackLayout>
+    <Grid RowDefinitions="Auto,*">
         <Label 
             Text="Your readed books."
             VerticalOptions="Center" 
             HorizontalOptions="Center"
             FontAttributes="Bold"
-            FontSize="20"/>
+            FontSize="20"
+            Grid.Row="0"/>
 
-        <CollectionView ItemsSource="{Binding ReadedBooks}">
+        <CollectionView ItemsSource="{Binding ReadBooks}" Grid.Row="1">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <Border Stroke="#ccc" 
@@ -52,5 +53,5 @@
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
-    </VerticalStackLayout>
+    </Grid>
 </ContentPage>
